syntax = "proto3";

message Request {
    enum RequestType {
        GET = 0;
        PUT = 1;
        POST = 2;
        DELETE = 3;
    }
    RequestType type = 1;
    string table = 2;
    string key = 3;
    string value = 4;
}

message Response {
    enum ResponseType {
        ERROR = 0;
        DATA = 1;
        OK = 2;
        LIST = 3;
    }

    ResponseType type = 1;
    string error_message = 2;
    repeated Table data = 3;
    repeated string value = 4;
}


message Table {
    string name = 1;
    map<string, string> values = 2;
}